# s3sync

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FULL_README.md  PERFORMANCE_INEFFICIENCIES_REPORT.md  README.md  SECURITY.md  build.rs  deny.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  post_create.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cargo-deny.yml  cd.yml  ci.yml  rust-clippy.yml  stale.yml
docs/superpowers/plans/: 2026-04-27-source-no-sign-request.md
docs/superpowers/specs/: 2026-04-27-source-no-sign-request-design.md
examples/: basic.rs  full.rs
src/: lib.rs
src/callback/: debug_event_callback.rs  debug_filter_callback.rs  debug_preprocess_callback.rs  event_manager.rs  filter_manager.rs  lua_event_callback.rs  lua_filter_callback.rs  lua_preprocess_callback.rs  mod.rs  preprocess_manager.rs  user_defined_event_callback.rs  user_defined_filter_callback.rs  user_defined_preprocess_callback.rs
src/config/: mod.rs
src/config/args/: mod.rs
src/config/args/tests/: build_config.rs  mod.rs  parse_credentials.rs  parse_storage.rs
src/config/args/tests/options/: accelerate.rs  acl.rs  additional_checksum.rs  cache_control.rs  check_additional_checksum.rs  check_etag.rs  check_mtime_and_additional_checksum.rs  check_mtime_and_etag.rs  check_size.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_type.rs  copy_source_if_match.rs  delete.rs  disable_additional_checksum_verify.rs  disable_content_md5_header.rs  disable_etag_verify.rs  disable_multipart_verify.rs  disable_payload_signing.rs  disable_stalled_stream_protection.rs  disable_tagging.rs  dry_run.rs  enable_additional_checksum.rs  enable_versioning.rs  exclude_content_type_regex.rs  exclude_metadata_regex.rs  exclude_tag_regex.rs  expires.rs  filter_exclude_regex.rs  filter_include_regex.rs  filter_larger_size.rs  filter_mtime_after.rs  filter_mtime_before.rs  filter_smaller_size.rs  force_retry.rs  full_object_checksum.rs  head_each_target.rs  http_proxy.rs  https_proxy.rs  (+34 more)
src/config/args/value_parser/: canned_acl.rs  checksum_algorithm.rs  file_exist.rs  human_bytes.rs  metadata.rs  mod.rs  regex.rs  sse.rs  storage_class.rs  storage_path.rs  tagging.rs  url.rs
src/lua/: lua_script_callback_engine.rs  lua_script_preprocess_callback_engine.rs  mod.rs
src/lua/script/: event_callback_example.lua  filter_callback_example.lua  preprocess_callback_example.lua
src/pipeline/: deleter.rs  diff_lister.rs  head_object_checker.rs  key_aggregator.rs  lister.rs  mod.rs  packer.rs  packer_point_in_time.rs  stage.rs  storage_factory.rs  syncer.rs  terminator.rs  user_defined_filter.rs  versioning_info_collector.rs
src/pipeline/diff_detector/: always_different_diff_detector.rs  checksum_diff_detector.rs  etag_diff_detector.rs  mod.rs  size_diff_detector.rs  standard_diff_detector.rs
src/pipeline/filter/: exclude_regex.rs  include_regex.rs  larger_size.rs  mod.rs  modified.rs  mtime_after.rs  mtime_before.rs  smaller_size.rs
src/storage/: additional_checksum_verify.rs  e_tag_verify.rs  mod.rs
src/storage/checksum/: crc32.rs  crc32_c.rs  crc64_nvme.rs  md5.rs  mod.rs  sha1.rs  sha256.rs  sha512.rs  xxhash128.rs  xxhash3.rs  xxhash64.rs
src/storage/local/: fs_util.rs  mod.rs
src/storage/s3/: client_builder.rs  mod.rs  upload_manager.rs
src/types/: async_callback.rs  debug_event_callback.rs  error.rs  event_callback.rs  event_manager.rs  filter_callback.rs  filter_message.rs  mod.rs  preprocess_callback.rs  preprocess_manager.rs  token.rs
test_data/: random_data_seed
test_data/denied/: denied
test_data/e2e_test/case1_2/: data1
test_data/e2e_test/case6/: data1
test_data/e2e_test/case6/dir1/: data1
test_data/e2e_test/case6/dir2/: data2
test_data/e2e_test/case6/dir21/: data++1
test_data/e2e_test/case6/dir5/: ☃☃👪
test_data/point_in_time/step1/: data1  data2
test_data/point_in_time/step2/: data1  data2  data4  data5
test_data/point_in_time/step3/: data3
test_data/script/: event_callback.lua  event_callback_error.lua  filter_callback.lua  filter_callback_error.lua  filter_callback_with_io_lib.lua  filter_callback_with_os_lib.lua  invalid_script.lua  no_entrypoint.lua  preprocess_callback.lua  preprocess_callback_error.lua  preprocess_callback_invalid_acl.lua  preprocess_callback_invalid_expire.lua  preprocess_callback_invalid_request_payer.lua  preprocess_callback_invalid_storage_class.lua  preprocess_callback_skip.lua  preprocess_callback_to_nil.lua
test_data/test_config/: config  credentials
tests/: README.md  cancel_test.rs  error_simulations.rs  event_callback.rs  express_one_zone.rs  filter_callback.rs  integrity_check.rs  local_to_s3.rs  lua_callback.rs  multipart_integrity_check_10mb_file_5mb_chunk.rs  multipart_integrity_check_16mb_file_5mb_chunk.rs  multipart_integrity_check_16mb_file_8mb_chunk.rs  multipart_integrity_check_30mb_file_8mb_chunk.rs  multipart_integrity_check_30mb_file_whole.rs  multipart_integrity_check_5mb_file_5mb_chunk.rs  multipart_integrity_check_8mb_file_8mb_chunk.rs  multipart_integrity_check_edge_case.rs  panic_simulations.rs  point_in_time_snapshot.rs  preprocess_callback.rs  s3_to_local.rs  s3_to_s3.rs  s3_to_s3_versioning.rs  source_no_sign_request.rs  sync_report.rs
tests/common/: mod.rs
