[package]
name = "s3sync"
version = "1.55.1"
edition = "2024"
authors = ["nidor1998 <nidor1998@gmail.com>"]
description = "Reliable, flexible, and fast synchronization tool for S3."
license = "Apache-2.0"
rust-version = "1.88.0"
repository = "https://github.com/nidor1998/s3sync"
homepage = "https://github.com/nidor1998/s3sync"
documentation = "https://docs.rs/s3sync"
readme = "README.md"
keywords = ["AWS", "Amazon", "S3", "sync"]
categories = ["command-line-utilities", "filesystem", "asynchronous", "concurrency"]

[dependencies]
anyhow = { version = "1.0.102" }
async-trait = "0.1.89"
async-channel = "2.5.0"
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-runtime = "1.6.0"
aws-sdk-s3 = "1.122.0"
aws-smithy-runtime-api = "1.11.3"
aws-smithy-types = { version = "1.4.3" }
aws-smithy-types-convert = { version = "0.60.12", features = ["convert-chrono"] }
aws-types = "1.3.11"
bitflags = "2.10.0"
base64 = "0.22.1"
byte-unit = "5.2.0"
cfg-if = "1.0.4"
clap = { version = "4.5.60", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.5.65"
clap-verbosity-flag = "3.0.4"
chrono = "0.4.43"
crc32c = "0.6.8"
crc32fast = "1.5.0"
crc-fast = "1.9.0"
dyn-clone = "1.0.20"
fancy-regex = "0.17.0"
filetime = "0.2.27"
futures = "0.3.32"
futures-util = "0.3.31"
leaky-bucket = "1.1.2"
md5 = "0.8.0"
mime_guess = "2.0.5"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.8.1"
indicatif = "0.18.3"
log = "0.4.29"
pin-project = "1.1.10"
percent-encoding = "2.3.2"
regex = "1.12.3"
rusty-fork = "0.3.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
shadow-rs = { version = "1.7.0", optional = true }
simple_moving_average = "1.0.2"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "local-time"] }
url = "2.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

## The following dependencies are only required for lua support.
## If you want to luagit, you can specify the `luajit` feature.
## mlua = { version = "0.11", features = ["luajit", "async", "send", "vendored"], optional = true }
## If you want to lua5.5, you can specify the `luajit` feature.
## mlua = { version = "0.11", features = ["lua55", "async", "send", "vendored"], optional = true }
## If you have trouble with third-party Lua libraries, remove `vendored` feature(static linking). This will use the system Lua engine.
## But you need to install Lua engine according to your OS.
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "vendored"], optional = true }

[dev-dependencies]
nix = { version = "0.31.1", features = ["user", "process", "signal"] }
once_cell = "1.21.3"
uuid = { version = "1.20.0", features = ["v4"] }

[build-dependencies]
shadow-rs = { version = "1.7.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(e2e_test)', 'cfg(e2e_test_dangerous_simulations)'] }

[features]
default = ["version", "lua_support"]

# Add detailed build information to the CLI version output
version = ["dep:shadow-rs"]

lua_support = ["dep:mlua"]

[profile.release]
debug = 1
panic = "unwind"  # For tempfile::NamedTempFile
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release-min-size]
inherits = "release"
debug = 0
panic = "abort"
opt-level = "z"
